--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "driver-tracking-admin",
   "version": "0.1.0",
+  "homepage": "http://nfd-inc.com/apps/admin",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.1",
@@ -15,13 +16,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-export-json-csv": "^1.0.1-2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "router-dom": "^2.2.9",
     "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --max_old_space_size=4096 start",
+    "build": "react-scripts --max_old_space_size=4096 build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
